redo consumer-hbase module

--- a/consumer-hbase/pom.xml
+++ b/consumer-hbase/pom.xml
@@ -10,6 +10,17 @@
   <groupId>org.dsci.streaming</groupId>
   <artifactId>consumer-hbase</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Archetype - consumer-hbase</name>
+  <name>consumer-hbase</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
