--- a/java/Kafka-Streaming-Twitter/pom.xml
+++ b/java/Kafka-Streaming-Twitter/pom.xml
@@ -38,5 +38,55 @@
       <version>18.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-yarn-client</artifactId>
+      <version>2.7.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>2.7.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-common</artifactId>
+      <version>2.7.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-mapreduce-client-core</artifactId>
+      <version>2.7.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>2.7.1</version>
+    </dependency>
   </dependencies>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.1</version>
+          <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+          </configuration>
+        </plugin>
+        <plugin>
+	 <groupId>org.apache.maven.plugins</groupId>
+	 <artifactId>maven-assembly-plugin</artifactId>
+	   <version>2.5.4</version>
+	   <configuration>
+	     <descriptorRefs>
+	       <descriptorRef>jar-with-dependencies</descriptorRef>
+	     </descriptorRefs>
+           </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
