--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ email: lngo@wcupa.edu
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal website
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://linhbngo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: linhbngo
 github_username:  linhbngo
 
