--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,10 @@ url: "http://linhbngo.github.io" # the base hostname & protocol for your site, e
 twitter_username: linhbngo
 github_username:  linhbngo
 
+collections:
+  operating-systems:
+    output: true
+
 # Build settings
 sass:
   sass_dir: _sass
