--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Linh B Ngo"
+title                    : "Research, Learn, Practice, Teach"
 title_separator          : "-"
 name                     : "Linh B Ngo"
-description              : "This is my personal websute"
+description              : ""
 url                      : "http://linhbngo.github.io"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -104,29 +104,18 @@ analytics:
 # Site Author
 author:
   name             : "Linh B Ngo"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "blah"
-  location         : "Somewhere"
+  avatar           : "/assets/images/bio/headshot.jpg"
+  bio              : "yet another professor"
+  location         : "West Chester, Pennsylvania"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: mailto:thayboibeo@gmail.com
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://github.com/linhbngo"
+
 
 # Site Footer
 footer:
