--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
   - title: "Teaching"
     url: /teaching/
 
+  - title: "Blog"
+    url: /blog/
+
 docs:
   - title: "Spring 2019"
     children:
