--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Linh B Ngo"
   avatar           : "/assets/images/bio/headshot.jpg"
-  bio              : "yet another professor"
+  bio              : "Assistant Professor of Computer Science"
   location         : "West Chester, Pennsylvania"
   email            :
   links:
