--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,12 +19,12 @@ docs:
 
   - title: "Spring 2020"
     children:
-      - title: "Application of Parallel Computers"
+      - title: "Application of Parallel Computers (496/581)"
         url: /docs/csc-468
 
   - title: "Winter 2019"
     children:
-      - title: "Big Data Engineering (496)"
+      - title: "Big Data Engineering (496/581)"
         url: /docs/csc-467/
 
   - title: "Fall 2019"
