--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: mailto:thayboibeo@gmail.com
+      url: mailto:lngo@wcupa.edu
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/linhbngo"
