--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ name                     : "Linh B Ngo"
 description              : ""
 #url                      : "http://linhbngo.github.io"
 url                      : "https://www.cs.wcupa.edu"
-baseurl                  : "lngo"
+baseurl                  : "/lngo"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
