--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,12 @@ main:
     url: /blog/
 
 docs:
+  - title: "Winter 2021"
+    children:
+      - title: "Big Data Engineering (496/581)"
+        url: /csc467/
 
-  - title: "Fall 2020"
+  - title: "Spring 2020"
     children:
       - title: "Computer Systems"
         url: /csc231/
@@ -34,18 +38,20 @@ docs:
         url: /docs/csc-141/
       - title: "Computer Science II (142)"
         url: /csc142/
+      - title: "Computer Systems (231)"
+        url: /csc231/
       - title: "Data Structures and Algorithms (241)"
         url: /docs/csc-241/
       - title: "Computer Security II (302)"
         url: /docs/csc-302/
       - title: "Operating Systems (331)"
-        url: /docs/csc-331/
+        url: /csc331/
       - title: "Cloud Computing (496)"
-        url: /docs/csc-496/
+        url: /csc468/
       - title: "Distributed and Cluster Computing (496)"
-        url: /docs/csc-466/
+        url: /csc466/
       - title: "Big Data Engineering (496/581)"
-        url: /docs/csc-467/
+        url: /csc467/
       - title: "Applications of Parallel Computers (496/581)"
         url: /docs/csc-469/
       - title: "Programming I (512)"
