--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@ title_separator          : "-"
 name                     : "Linh B Ngo"
 description              : ""
 #url                      : "http://linhbngo.github.io"
-#url                      : "https://www.cs.wcupa.edu"
-baseurl                  : "/lngo"
+#url                      : "https://www.cs.wcupa.edu/lngo"
+#baseurl                  : "/lngo"
+baseurl                   : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
