--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Research, Learn, Practice, Teach"
 title_separator          : "-"
 name                     : "Linh B Ngo"
 description              : ""
-#url                      : "http://linhbngo.github.io"
+url                      : "http://linhbngo.github.io"
 #url                      : "https://www.cs.wcupa.edu/lngo"
 #baseurl                  : "/lngo"
 baseurl                   : ""
