--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ title                    : "Research, Learn, Practice, Teach"
 title_separator          : "-"
 name                     : "Linh B Ngo"
 description              : ""
-url                      : "http://linhbngo.github.io"
-#url                      : "https://www.cs.wcupa.edu/lngo"
-#baseurl                  : "/lngo"
-baseurl                   : ""
+#url                      : "http://linhbngo.github.io"
+url                      : "https://www.cs.wcupa.edu"
+baseurl                  : "/lngo"
+#baseurl                   : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
